--- a/resources/public/css/global.css
+++ b/resources/public/css/global.css
@@ -9,11 +9,11 @@ pre {
 }
 
 div#search-input {
-    padding: 0px 0px 20px 20px;    
+    padding: 0px 0px 20px 20px;
 }
 
 div#search-value {
-    padding: 0px 0px 20px 20px;    
+    padding: 0px 0px 20px 20px;
 }
 
 dl {
@@ -23,10 +23,10 @@ dl {
 }
 
 dt {
-    color: #aaa;
     background-color: #eee;
 }
 
 dd {
     color: #999;
+    background-color: #eee;
 }
