Change the way whitespace is handled in syntaxhighlighter

--- a/resources/public/css/global.css
+++ b/resources/public/css/global.css
@@ -44,3 +44,7 @@ dd {
     /* background-color: #eee; */
     border-bottom: 1px solid #ddd;
 }
+
+.syntaxhighlighter {
+    white-space: pre-wrap;
+}
